# typst-imgopt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: main-no-opt.typ  main.typ
scripts/: build-wasm.sh  compare-pdf-size.sh
src/: lib.rs
typst/: imgopt.typ
